# DecentralizedVotingApp

./: Cargo.toml  README.md  index.html  main.js  main.rs  package.json  styles.css  truffle-config.js
contracts/: Voting.sol
models/: user.rs  vote.rs
routes/: users.rs  votes.rs
