[package]
name = "decentralized_voting_app"
version = "0.1.0"
authors = ["starj <asin489363@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = "0.15.0"
